# TruffleMemory

./: .env.example  .gitignore  README.md  chat_cli.py  design.md  ingest.py  pyproject.toml  requirements.txt
config/: settings.py
memory/: chunker.py  ingestion.py  llm_client.py  models.py  parser.py  pii.py  profile.py  rosetta.py  salience.py  summarizer.py
memory/storage/: __init__.py  chroma_store.py  sqlite_store.py
runtime/: chat.py  graph.py  policy.py  retrieval.py  steward.py
scripts/: chat_cli.py  ingest.py
tests/: test_answer_confidence.py  test_ingestion_store_phases.py  test_parser.py  test_policy.py  test_retrieval_scope.py
